# Manimize

./: .gitignore  LICENSE  README.md  docker-compose.yml  generated_manim.py  langchain_manimizer.py  main.py  pyproject.toml
backend/: Dockerfile  alembic.ini  dependencies.py  guide.md  main.py  pyproject.toml  pyrightconfig.json
backend/config/: dict_config.py
backend/scripts/: 5f4c3f61-8e74-4068-9c0d-f8ad8265ae5e.py  86baf37c-aa83-47f1-b1a8-d1edf64dc069.py  attempt1.py
backend/src/agent/: __init__.py  constants.py  exceptions.py  model_config.py  model_registry.py  nodes.py  utils.py  workflow_langgraph.py  workflow_pocketflow.py
backend/src/agents/: __init__.py  concept_agent.py  debug_agent.py  manim_agent.py
backend/src/api/: __init__.py  routes.py
backend/src/core/: __init__.py  config.py  models.py  utils.py
backend/src/dcelery/: celery.py  tasks.py
backend/src/execution/: __init__.py  manim_executor.py
backend/src/models/: azure.py  code.py  enums.py  openai.py  session.py  user.py  video.py
backend/src/providers/: __init__.py  azure.py  base.py  openai.py
backend/src/types/: chat_completions.py
backend/src/workflow/: __init__.py  graph.py
experimental/: conversational.py  langchain_impl.py  langgraph_impl.py  prototype.py
experimental/web_data/: scrapper.py
experimental/web_data/chroma_db/: chroma.sqlite3
v1/: concept_refinement.py  config.py  generated_manim.py  main.py  manim_generation.py  models.py  sample_manim_celine.py  scrapper.py  scrapper_experimental.py  utils.py
(+773 files in other folders)
