[project]
name = "manimizer-backend"
version = "0.1.0"
description = "Backend for Manimizer, a tool to visualize mathematical concepts with Manim"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.25",
    "langchain-azure-ai>=0.1.3",
    "langgraph>=0.4.8",
    "manim>=0.19.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "fastapi[standard]>=0.92.0",
    "uvicorn>=0.20.0",
    "pocketflow>=0.0.3",
]
